# PointProcessor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PointProcessor.sln  README.md  cmake_install.cmake
ModbusLib/: CMakeLists.txt  Crc16.cpp  Crc16.h  FunctionCode.h  ModbusLib.h  ModbusLib.vcxproj  ModbusLib.vcxproj.filters  Parameter.h  Protocol.h  Request.cpp  Request.h  Response.cpp  Response.h  ValueType.h  dllmain.cpp
PointLib/: Constants.h  Data.c  Data.h  Makefile  PointLib.h  PointLib.vcxproj  PointLib.vcxproj.filters  dllmain.c
PointLib/Points/: PointId.c  PointId.h  PointType.h
PointLib/Points/Bool/: BoolInput.c  BoolInput.h  BoolPoint.c  BoolPoint.h
PointLib/Points/Float/: FloatPoint.c  FloatPoint.h
PointLib/Points/Int/: IntPoint.c  IntPoint.h
PointLib/System/: NamedMutex.c  NamedMutex.h  SharedMemory.c  SharedMemory.h
PointProc/: NamedMutex.c  NamedMutex.h  PidTable.c  PidTable.h  PointProc.c  pids.txt
PointProcessor/: BoolInput.c  BoolInput.h  BoolPoint.c  BoolPoint.h  Constants.h  Data.c  Data.h  FloatPoint.c  FloatPoint.h  Frequency.h  IntPoint.c  IntPoint.h  Makefile  NamedMutex.c  NamedMutex.h  PidTable.c  PidTable.h  Point.h  PointProc.c  PointProcessor.c  PointProcessor.cpp  PointProcessor.vcxproj  PointProcessor.vcxproj.filters  Quality.cpp  Quality.h  SharedMemory.c  SharedMemory.h  ValueQualityTable.h
PointProcessorLib/: AlarmInterface.h  AveragePoint.h  CMakeLists.txt  CToFPoint.h  ChauvenetAveragePoint.h  CounterPoint.h  DigitalFilterPoint.h  DividePoint.h  EqualSelectPoint.h  ExternalPoint.h  FToCPoint.h  Frequency.cpp  Frequency.h  GreaterThanEqualSelectPoint.h  GreaterThanSelectPoint.h  Makefile  MultiplyPoint.h  NamedMutex.c  NamedMutex.cpp  NamedMutex.h  Point.cpp  Point.h  PointProcessorLib.cpp  PointProcessorLib.h  PointProcessorLib.vcxproj  PointProcessorLib.vcxproj.filters  PointProcessorShm.cpp  PointProcessorShm.h  PointType.h  PolynomialPoint.h  PowerPoint.h  Quality.cpp  Quality.h  SelectPoint.h  SharedMemory.cpp  SharedMemory.h  ShmAllocator.h  ShmPool.cpp  ShmPool.h  ShmTypes.h  (+4 more)
PointProcessorTest/: AvgeragePointTest.cpp  CMakeLists.txt  CToFPointTest.cpp  ChauvenetAveragePointTest.cpp  CounterPointTest.cpp  DigitalFilterPointTest.cpp  DividePointTest.cpp  EqualSelectPointTest.cpp  ExternalPointTest.cpp  FToCPointTest.cpp  GTestCMakeLists.txt  GreaterThanEqualSelectPointTest.cpp  GreaterThanSelectPointTest.cpp  IntegerPrecisionTest.cpp  MultiplyPointTest.cpp  NamedMutexTest.c  NamedMutexTest.cpp  NamedMutexTest.h  PointProcessorTest.vcxproj  PointProcessorTest.vcxproj.filters  PolynomialPointTest.cpp  PowerPointTest.cpp  SelectPointTest.cpp  SharedMemoryTest.c  SharedMemoryTest.cpp  ShmAllocatorTest.cpp  SubtractPointTest.cpp  SumPointTest.cpp  main.cpp  pch.h
PointProcessorTests/: Makefile  NamedMutexTest.c  PidTableTest.c  PidTableTest.h  PointProcessorTests.c  PointProcessorTests.vcxproj  PointProcessorTests.vcxproj.filters
SBB/: NamedMutex.cpp
SBBLib/: CMakeLists.txt  NamedMutex.cpp  NamedMutex.h  SBBLib.cpp  SBBLib.h  SBBLib.vcxproj  SBBLib.vcxproj.filters  SharedMemory.cpp  SharedMemory.h  ShmAllocator.h  ShmPool.cpp  ShmPool.h  ShmTypes.h  dllmain.cpp
SBBTest/: CMakeLists.txt  NamedMutexTest.cpp  SBBTest.vcxproj  SBBTest.vcxproj.filters  SharedMemoryTest.cpp  ShmAllocatorTest.cpp  pch.h
Tests/: Constants.h  Data.c  Data.h  Makefile  NamedMutexTest.c  PidTable.h  PidTableTest.c  PointTypes.h  Quality.h  SharedMemoryTest.c  SharedMemoryTest.h  Tests.c  Tests.vcxproj  Tests.vcxproj.filters
Tests/Points/: PointIdTest.c  PointIdTest.h
Tests/System/: NamedMutexTest.c  SharedMemoryTest.c
